--- a/PointOfSale.RyanW84/Properties/launchSettings.json
+++ b/PointOfSale.RyanW84/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PointOfSale.RyanW84": {
       "commandName": "Project",
-      "workingDirectory": @"C:\Users\Ryanw\OneDrive\Documents\GitHub\CONSOLE.PointOfSale\PointOfSale.RyanW84"
+      "workingDirectory": "C:\\Users\\Ryanw\\OneDrive\\Documents\\GitHub\\CONSOLE.PointOfSale\\PointOfSale.RyanW84"
     }
   }
 }
