--- a/PointOfSale.RyanW84/PointOfSale.EntityFramework.RyanW84.csproj
+++ b/PointOfSale.RyanW84/PointOfSale.EntityFramework.RyanW84.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.3" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
